--- a/projects/1.1_tributePage/main.css
+++ b/projects/1.1_tributePage/main.css
@@ -13,7 +13,7 @@ html, body {
   top: 3%;
   max-width: 850px;
   min-width: 700px;
-  margin-bottom: 3%;
+  margin-bottom: 10px;
   padding-top: 1%;
   padding-bottom: 2%;
 }
@@ -112,15 +112,20 @@ blockquote:after{
   position: relative;
   margin-left: 6.5%;
 }
-.footer{
-  text-align: center;
-  font-size: 12px;
-  min-width: 700px;
-  position: absolute;
-  padding: 0;
+footer{
+  position: relative;
   right: 0;
   left: 0;
+  bottom: 0;
+  width: 100%;
+  min-width: 700px;
+  height: 30px;
+  text-align: center;
 }
-#footer{
-  margin: 0;
+.footer{
+  height: 100%;
+  line-height: 15px;
+  position: relative;
+  margin: 0 auto;
+  padding: 0;
 }
