--- a/projects/1.2_surveyForm/main.css
+++ b/projects/1.2_surveyForm/main.css
@@ -48,60 +48,42 @@ body{
   "emailL emailI . ageG"
   "countryL countryI genderL genderG"
 }
-#name-label{
-  grid-area: nameL;
-}
+#name-label{grid-area: nameL;}
 #name{
   grid-area: nameI;
   height: 1.5em;
   padding-left: 2px;
 }
-#email-label{
-  grid-area: emailL;
-}
+#email-label{grid-area: emailL;}
 #email{
   grid-area: emailI;
   height: 1.5em;
   padding-left: 2px;
 }
-#age{
-  grid-area: ageL;
-}
+#age{grid-area: ageL;}
 .age{
   grid-area: ageG;
   display: grid;
   grid-template-columns: 20px 1fr 20px 1fr;
   grid-template-rows: 33px 33px 33px;
 }
-input[name=age]{
-  cursor: pointer;
-}
-#origin{
-  grid-area: countryL;
-}
+input[name=age]{cursor: pointer;}
+#origin{grid-area: countryL;}
 #country{
   grid-area: countryI;
   height: 1.5em;
   padding-left: 2px;
 }
-#gender{
-  grid-area: genderL;
-}
+#gender{grid-area: genderL;}
 .gender{
   grid-area: genderG;
   display: grid;
   grid-template-columns: 22px 1fr 22px 1fr 22px 1fr;
   padding-right: 50px;
 }
-#male, #female, #other{
-  cursor: pointer;
-}
-#name, #email, #country{
-  max-width: 200px;
-}
-hr{
-  margin: 20px;
-}
+#male, #female, #other{cursor: pointer;}
+#name, #email, #country{max-width: 200px;}
+hr{margin: 20px;}
 .surveyQ{
   align-items: center;
   margin: 10px;
@@ -111,24 +93,18 @@ hr{
   grid-template-rows: repeat(4, 50px);
   grid-template-columns: 1fr 1fr;
 }
+#genre, #dropdown, #artist, #number{
+  height: 1.5em;
+  padding-left: 2px;
+}
 #number-label, #genre, #favInst, #favArt, #commentsL{
-  justify-self: end;
+justify-self: end;
 }
-#commentsL{
-  align-self: end;
-}
-#number{
-  max-width: 140px;
-}
-#dropdown, #instrument{
-  max-width: 100px;
-}
-#artist{
-  max-width: 200px;
-}
-#comments{
-  max-width: 250px;
-}
+#commentsL{align-self: end;}
+#number{max-width: 140px;}
+#dropdown, #instrument{max-width: 100px;}
+#artist{max-width: 200px;}
+#comments{max-width: 250px;}
 #submit{
   cursor: pointer;
   margin: 30px;
@@ -137,9 +113,7 @@ hr{
   border-radius: 5px;
   color: rgb(0, 0, 0, 0.7)
 }
-#submit:hover{
-  color: rgb(0, 0, 0)
-}
+#submit:hover{color: rgb(0, 0, 0)}
 
 
 @media (max-width: 765px){
@@ -161,14 +135,13 @@ hr{
     "countryL countryI"
     "genderL genderG"
   }
-  #name, #email, #country{
-    max-width: 220px;
-  }
+  #name, #email, #country{max-width: 220px;}
   #name-label, #email-label, #age, #origin, #gender{
     justify-self: end;
     padding-right: 50px;
   }
-  #submit{margin-left: 50%;}
+  .submit{text-align: center;}
+  #submit{margin: 20px auto 10px auto;}
 }
 @media (max-width: 500px){
   .personalInfo{
@@ -181,25 +154,14 @@ hr{
   }
 }
 @media (max-width: 400px){
-  #name, #email, #country{
-    max-width: 150px;
-  }
+  #name, #email, #country{max-width: 150px;}
 }
 @media (min-width: 1000px){
-  .bGround{
-    background-size: 26%;
-  }
+  .bGround{background-size: 26%;}
 }
 @media (max-width: 500px){
-  .bGround{
-    background-size: 25%;
-  }
+  .bGround{background-size: 25%;}
 }
-
-
-
-
-
 
 .footer{
   text-align: center;
